Bug 436143 - Duplicate Flathub sources
Summary: Duplicate Flathub sources
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 5.21.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-24 21:06 UTC by Gustavo
Modified: 2021-04-28 14:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Print of the configuration window. (247.17 KB, image/png)
2021-04-24 21:06 UTC, Gustavo
Details
Print of the navigation window. (190.32 KB, image/png)
2021-04-24 21:07 UTC, Gustavo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gustavo 2021-04-24 21:06:28 UTC
Created attachment 137885 [details]
Print of the configuration window.

SUMMARY

Duplicate Flathub sources.


STEPS TO REPRODUCE

1. Have Flatpak backend installed with FlatHub repo configured;
2. Open Discover;
3. Click on "Applications" in sidebar;
4. Navigate to any item that has a Flathub font;
5. Click on "Sources" menu in top-right corner.

OR...

1. Have Flatpak backend installed with FlatHub repo configured;
2. Open Discover;
3. Click on "Configurations" in sidebar;
4. Look for "Flatpak" session in the list.


OBSERVED RESULT

Flatpak source has duplicate URI and packages. There is no way to remove the additional source without uninstalling all the packages.


EXPECTED RESULT

A single Flathub source.
 

SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.21
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.4.0-72-generic
OS Type: 64-bit
Graphics Platform: X11
Processors: 4 × Intel® Core™ i3-8145U CPU @ 2.10GHz
Memory: 3.7 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620


ADDITIONAL INFORMATION

This bug was observed in the Brazilian Portuguese version.
Comment 1 Gustavo 2021-04-24 21:07:53 UTC
Created attachment 137886 [details]
Print of the navigation window.
Comment 2 Nate Graham 2021-04-27 17:52:34 UTC
Jeez.
Comment 3 Aleix Pol 2021-04-27 23:49:05 UTC
Git commit 6a8aeef3842aa2797a18c21934423563d8172d4b by Aleix Pol.
Committed on 27/04/2021 at 23:46.
Pushed by apol into branch 'master'.

flatpak: Specify when a source is user-local

A user might have added a repository twice both on the system and the
user deployments. This means that they'll be listed two seemingly equal
repositories and feel the world is melting.
This adds (user) at the end when it's a user-specific installation
(which generally are less common) so that they can be differentiated.

M  +5    -1    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp

https://invent.kde.org/plasma/discover/commit/6a8aeef3842aa2797a18c21934423563d8172d4b
Comment 4 Gustavo 2021-04-28 01:03:22 UTC
(In reply to Aleix Pol from comment #3)
> Git commit 6a8aeef3842aa2797a18c21934423563d8172d4b by Aleix Pol.
> Committed on 27/04/2021 at 23:46.
> Pushed by apol into branch 'master'.
> 
> flatpak: Specify when a source is user-local
> 
> A user might have added a repository twice both on the system and the
> user deployments. This means that they'll be listed two seemingly equal
> repositories and feel the world is melting.
> This adds (user) at the end when it's a user-specific installation
> (which generally are less common) so that they can be differentiated.
> 
> M  +5    -1    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp
> 
> https://invent.kde.org/plasma/discover/commit/
> 6a8aeef3842aa2797a18c21934423563d8172d4b

I'm not sure if I understand what you said, but I didn't add any repositories to the system, I just activated the sources that came in KDE neon out of the box. Anyway, how can I solve the problem?

PS: I can't access the commit link.
Comment 5 Aleix Pol 2021-04-28 14:26:08 UTC
It will appear fixed when the fix lands on your system.